configured correct jar building